# ChangeLog for www-servers/pound
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/pound/ChangeLog,v 1.36 2008/04/24 20:51:43 bangert Exp $

*pound-2.4.2 (24 Apr 2008)

  24 Apr 2008; Thilo Bangert <bangert@gentoo.org> +pound-2.4.2.ebuild:
  version bump

  10 Mar 2008; Thilo Bangert <bangert@gentoo.org> pound-2.4.ebuild:
  reflect license change to GPLv3

*pound-2.4 (11 Feb 2008)

  11 Feb 2008; Thilo Bangert <bangert@gentoo.org> +pound-2.4.ebuild:
  version bump

  30 Jan 2008; Thilo Bangert <bangert@gentoo.org> -pound-2.0.5.ebuild,
  -pound-2.1.ebuild, -pound-2.2.ebuild, -pound-2.3.ebuild,
  -pound-2.3.1.ebuild:
  remove old versions

  29 Jan 2008; Raúl Porcel <armin76@gentoo.org> pound-2.3.2.ebuild:
  alpha stable wrt #207552

  26 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> pound-2.3.2.ebuild:
  ppc stable, bug #207552

  26 Jan 2008; Thilo Bangert <bangert@gentoo.org> pound-1.10.ebuild,
  pound-2.0.5.ebuild, pound-2.1.ebuild, pound-2.2.ebuild, pound-2.3.ebuild,
  pound-2.3.1.ebuild, pound-2.3.2.ebuild:
  fix quoting

  12 Nov 2007; Raúl Porcel <armin76@gentoo.org> pound-2.3.2.ebuild:
  x86 stable

*pound-2.3.2 (18 May 2007)

  18 May 2007; Thilo Bangert <bangert@gentoo.org> +pound-2.3.2.ebuild:
  version bump

*pound-2.3.1 (07 May 2007)

  07 May 2007; Thilo Bangert <bangert@gentoo.org> +pound-2.3.1.ebuild:
  version bump

*pound-2.3 (11 Apr 2007)

  11 Apr 2007; Thilo Bangert <bangert@gentoo.org> +pound-2.3.ebuild:
  version bump

  09 Jan 2007; Thilo Bangert <bangert@gentoo.org> pound-1.10.ebuild,
  pound-2.0.5.ebuild, pound-2.1.ebuild:
  einfo -> elog transition

*pound-2.2 (08 Jan 2007)

  08 Jan 2007; Thilo Bangert <bangert@gentoo.org> +files/pound-2.2.cfg,
  +pound-2.2.ebuild:
  version bump

  10 Dec 2006; Elfyn McBratney <beu@gentoo.org> pound-1.10.ebuild,
  pound-2.0.5.ebuild, pound-2.1.ebuild:
  Kill redundant DEPEND on virtual/libc.
