@@ -5,10 +5,12 @@ AUX pound.init-1.9 609 RMD160 087d2c8f4460c18fe73a389c4f0b36d003a963ef SHA1 5eb9
 DIST Pound-1.10.tgz 145616 RMD160 1b76d1a7c3893266f24c4f1676cd77cf12bfce28 SHA1 0df82520befd3f6e05e5338738324a58799e9aac SHA256 64be15d72e9bd69d8633c66be5de6cccdd67f8a8fc9328521c304f83935c0b2a
 DIST Pound-2.3.2.tgz 154678 RMD160 b04401f7ec9857defae5f1198ab9247bf26db0b7 SHA1 93f248e7c5448c8b26905420e2f5d5fdafd33a51 SHA256 37c77ee9d7872e8d643c514040a1d0d36960e1caa98252fc473d0a7d645f6ce4
 DIST Pound-2.4.2.tgz 163360 RMD160 5c774937f6554ffad25a93813438ba18f29420c3 SHA1 51935de6fe2d46f100bae45a49751f027b53b512 SHA256 dbea4fe633b7e2f2d82b6e199a6a7c5992b6f79d453fd56c8ccf094d9a69876a
+DIST Pound-2.4.3.tgz 169592 RMD160 a59c5fda7ce12513a894c4cbe59708f2fb73caa3 SHA1 1d86e134bf307c9e2f10f647a73925339ba96575 SHA256 bf31b1a4bcb797bc57e831418cf61f8ad9ca4e9e8c6614203b37525140caa9c6
 DIST Pound-2.4.tgz 162876 RMD160 380689a0062b1cc844c135499ca822c677c80aee SHA1 98138d54e536ab17ebd409f714f30a0f22fe40c9 SHA256 3fdb9f6a2e4f4646412d216fe0fcb346a9be274fb9908dd7dc186b6361ba7fd5
 EBUILD pound-1.10.ebuild 1153 RMD160 1e0cadd798680558a648c2a9790335d97c9b613e SHA1 1682d473ba7d3160e7c821a244e016860a506820 SHA256 7e047931270eba161ce7464503fe46ef351d445deb43e3ac14077340d76f7b0e
 EBUILD pound-2.3.2.ebuild 1501 RMD160 82c69e1f8312209d05fff1e6a213062d0c6fa274 SHA1 16991081928613c8ad8cb3f5129c6a271af8d88b SHA256 eb45e831b060e1b0542899484130330620ddc6259ac7a41c1c40ec6bc3b22270
 EBUILD pound-2.4.2.ebuild 1504 RMD160 a432813e87bb131fb3aab37b8bf22b2cb862f067 SHA1 97a66cc777ce466e2abfd9f762d721908f65514c SHA256 655b6e09df89cbe4244e3771da4fb33546d529f2ff55be4c0dbb92ff85e18206
+EBUILD pound-2.4.3.ebuild 1504 RMD160 2830dbb886dc744c7a838585c005267b5917e77e SHA1 aa7f78424a05f2df5eb17ae74a6e3b739ff5340d SHA256 5508915ac01c77dca6c105fb526d4d0e8dd60d4188a349c83785edf7b901c856
 EBUILD pound-2.4.ebuild 1502 RMD160 8778cb38f45982c1caf2420a5808eb66a483289d SHA1 32ec21456da1537097db31b9beea68ea3d9fd1b2 SHA256 cee2f36cafce10eedf486461f806a35e9afb483968532f0562a1ba6a27cad66e
-MISC ChangeLog 6330 RMD160 96805738d0a6eefb24ac5c8404be817ceda296be SHA1 b854bae2dda7e64ad0f5807a4ddd5b1565178373 SHA256 95e004d45863cceceda3028da53417995462abe5b7632d6201833e91f11914ab
+MISC ChangeLog 6445 RMD160 8b36f44ceacbeb9739cff22a3448988e5d790c8d SHA1 17cf6cd66708bae8026ac23eddb257c44ab210fe SHA256 06fe3cb6126d397eaff444c11ca89d38be4aec8c940322bd534d4c3698c8535e
 MISC metadata.xml 666 RMD160 9c1fa8756b4b8f62d185664e7c49318e88c7244d SHA1 51e2cb3d5ba631ff2dda9b55f9a0ab08d465dbd0 SHA256 e65f3791aefa1da793704b0f600c7eedc1716a8b92587b1fbf14b4b03cb7feb6
