@@ -1,6 +1,11 @@
 # ChangeLog for www-servers/pound
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/pound/ChangeLog,v 1.36 2008/04/24 20:51:43 bangert Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/pound/ChangeLog,v 1.37 2008/05/31 16:06:45 bangert Exp $
+
+*pound-2.4.3 (31 May 2008)
+
+  31 May 2008; Thilo Bangert <bangert@gentoo.org> +pound-2.4.3.ebuild:
+  version bump
 
 *pound-2.4.2 (24 Apr 2008)
 
